--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,10 @@ author:
   name: 'CPP'
   email: cpp1092020@gmail.com
   #twitter_username: none
-  #facebook_username: none
+  facebook_username: steven.yeh.543
   github_username:  qaz5823091
   #linkedin_username:  none
+  instagram_username: 1010.0110.0110
 
 defaults:
   -
