--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: recursive
+          ref: main
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
