Update: remove instagram and add linkedin

--- a/config.toml
+++ b/config.toml
@@ -68,8 +68,8 @@ showtoc = true
 
 
   [[params.socialIcons]]
-  name = "instagram"
-  url = "https://www.instagram.com/1010.0110.0110"
+  name = "linkedin"
+  url = "https://www.linkedin.com/in/%E5%AE%97%E7%BE%B2-%E8%91%89-369b7528b/"
 
 
 [params.analytics.google]
