Update: add Google Analytics

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ enableRobotsTXT = true
 buildDrafts = false
 buildFuture = false
 buildExpired = false
-# googleAnalytics = "UA-123-45"
+googleAnalytics = "G-QWLZWQMPZL"
 
 [minify]
 disableXML = true
